GS-13087: Search Redesign Walton: Front-end issues from Google doc(aligned the search button for chrome)

--- a/src/webapp/res/css/05_forms/forms.css
+++ b/src/webapp/res/css/05_forms/forms.css
@@ -129,7 +129,7 @@ legend, #IE8#HACK {margin-top:0;margin-bottom:0;}*/
 .slFormsV1-0 input.text {padding:5px 5px;}
 .slFormsV1-0 input.searchText {padding:5px 5px;}
 .slFormsV1-0 input.text-smaller {padding:2px;}
-.slFormsV1-0 input.text-bigger {padding: 10px 5px;}
+.slFormsV1-0 input.text-bigger {padding: 0px 5px;height: 34px;}
 .slFormsV1-0 textarea {padding:5px;resize:none;overflow:auto;}
 .slFormsV1-0 textarea.height-1{height:69px;}
 .slFormsV1-0 textarea.height-2{height:123px;}
